clang/test/BSC/Positive/Trait/GenericTrait/define_trait_var/define_trait_var.cbs
// RUN: %clang %s -o %t.output
// RUN: %t.output
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

trait F<T> {

};
trait F<int>* t1;

int main() {
    return 0;
}